# in_hand_scanner

./: CMakeLists.txt  FindOpenNI.cmake  FindOpenNI2.cmake  LICENSE  README.md  boost.h  common_types.h  help_window.cpp  icp.cpp  icp.h  in_hand_scanner.cpp  in_hand_scanner.h  input_data_processing.cpp  input_data_processing.h  integration.cpp  integration.h  main.cpp  main_offline_integration.cpp  main_window.cpp  main_window.h  mesh_processing.cpp  mesh_processing.h  offline_integration.cpp  offline_integration.h  opengl_viewer.cpp  opengl_viewer.h  visibility_confidence.cpp  visibility_confidence.h
